Remove crossroads, signals, and underscore
Javascript module dynamic loading is no longer handled by frontend router.
"js_components" must be set in the template, and app.js will read modules from
that and attempt to load them.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 {% set buster = applicationSha[:4] ?: 'dev' ~ 'now'|date('U') %}
 <html class="no-js" id="{{ html_id ?: '' }}">
-    <head>
+
+    {% if js_components %}
+        <head data-js-components="{{ js_components|join(' ') }}">
+    {% else %}
+        <head>
+    {% endif %}
         <meta charset="utf-8">
         {% block page_head %}
             <title>
@@ -45,8 +50,6 @@
                 {% block content %}{% endblock %}
             </main>
             {% endblock %}
-
-            {% block page_footer %}{% endblock %}
 
         {% endblock %}
 
