--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import "partials/macros.twig" as macros %}
+{% set js_components = ["dashboard", "queue"] %}
 
 {% set page_title = 'Dashboard' %}
 
