--- a/templates/kraken/configuration/latest/property.add.twig
+++ b/templates/kraken/configuration/latest/property.add.twig
@@ -1,6 +1,7 @@
 {% extends 'base.kraken.twig' %}
 {% import "partials/macros.twig" as macros %}
 {% import "partials/form/macros.twig" as form_macros %}
+{% set js_components = ["kraken.property"] %}
 
 {% set page_title = "Add Property" %}
 
