--- a/templates/push/pushes.twig
+++ b/templates/push/pushes.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import 'partials/pagination.twig' as pagination %}
+{% set js_components = ["job.updater"] %}
 
 {% set page_title = repo.name ~ " Push History" %}
 
