--- a/templates/admin/server.status.twig
+++ b/templates/admin/server.status.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import "partials/macros.twig" as macros %}
+{% set js_components = ["admin.servers"] %}
 
 {% set page_title = "Global Server Status" %}
 
