--- a/templates/environment/admin.reorder.twig
+++ b/templates/environment/admin.reorder.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import "partials/macros.twig" as macros %}
+{% set js_components = ["environment.order"] %}
 
 {% set page_title = "Reorder Environments" %}
 
