--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% import 'partials/macros.twig' as macros %}
+{% set js_components = ["push.info"] %}
 
 {% set page_title = "Push Information" %}
 
