--- a/templates/_partial/layout.messages.twig
+++ b/templates/_partial/layout.messages.twig
@@ -1,5 +1,5 @@
 {# FLASH MESSAGES #}
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% block flash %}
     {% if session.flash(true) %}
