--- a/templates/_partial/pagination.twig
+++ b/templates/_partial/pagination.twig
@@ -1,6 +1,6 @@
 
 {% macro pagination(currentPage, lastPage, routeName, routeParameters, queryParameters) %}
-    {% import "partials/macros.twig" as macros %}
+    {% import "_partial/macros.twig" as macros %}
 
     {% set queryParameters = queryParameters|default({}) %}
 
@@ -36,7 +36,7 @@
 {% endmacro %}
 
 {% macro time_pagination(selectedDate, routeName, routeParameters, queryParameters) %}
-    {% import "partials/macros.twig" as macros %}
+    {% import "_partial/macros.twig" as macros %}
 
     {% set routeParameters = routeParameters|default({}) %}
     {% set queryParameters = queryParameters|default({}) %}
