--- a/templates/admin/audit.logs.twig
+++ b/templates/admin/audit.logs.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% import 'partials/pagination.twig' as pagination %}
+{% import '_partial/pagination.twig' as pagination %}
 
 {% set page_title = "Audit Log History" %}
 
