--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = 'Deployment Help' %}
 
