--- a/templates/kraken/_partial/configuration.twig
+++ b/templates/kraken/_partial/configuration.twig
@@ -1,5 +1,5 @@
-{% import "partials/macros.twig" as macros %}
-{% import "kraken/partial/macros.twig" as kraken_macros %}
+{% import "_partial/macros.twig" as macros %}
+{% import "kraken/_partial/macros.twig" as kraken_macros %}
 
 {% if properties %}
 
