--- a/templates/kraken/_partial/schema.twig
+++ b/templates/kraken/_partial/schema.twig
@@ -1,4 +1,4 @@
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% if schema %}
     <table class="table--spacing-medium table--striped">
