--- a/templates/kraken/configuration/history.twig
+++ b/templates/kraken/configuration/history.twig
@@ -1,6 +1,6 @@
 {% extends 'base.kraken.twig' %}
-{% import 'partials/pagination.twig' as pagination %}
-{% import "partials/macros.twig" as macros %}
+{% import '_partial/pagination.twig' as pagination %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = application.name ~ " Configuration History" %}
 
