--- a/templates/kraken/configuration/rollback.twig
+++ b/templates/kraken/configuration/rollback.twig
@@ -1,6 +1,6 @@
 {% extends 'base.kraken.twig' %}
-{% import "partials/macros.twig" as macros %}
-{% import "kraken/partial/macros.twig" as kraken_macros %}
+{% import "_partial/macros.twig" as macros %}
+{% import "kraken/_partial/macros.twig" as kraken_macros %}
 
 {% set page_title = "Rollback Configuration" %}
 
@@ -14,60 +14,15 @@
     <h4>Environment</h4>
     <p>{{ environment.name }}</p>
 
-    <h2>Verify Deployment</h2>
-    {{ block('deploy_comparison') }}
+    {% include 'kraken/_partial/configuration.status.twig' %}
 
+    <h2>Verify Rollback</h2>
+    {% include 'kraken/_partial/configuration.comparison.twig' %}
+
+    {{ block('lets_do_this') }}
 {% endblock %}
 
-{% block deploy_comparison %}
-
-    {% if diffs %}
-        <table class="table--spacing-medium table--striped table--top-aligned trailer" data-tablesaw-mode="stack">
-            <thead>
-                <tr>
-                    <th>Property</th>
-                    <th class="t40">Deployed</th>
-                    <th class="t40">Latest</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for diff in diffs %}
-                    <tr>
-                        <td>
-                            {% if diff.schema %}
-                                <code class="code_clear">{{ diff.schema.key }}</code>
-                            {% elseif diff.configuration %}
-                                <code class="code_clear">{{ diff.configuration.key }}</code>
-                            {% endif %}
-                        </td>
-
-                        <td>
-                            {% if diff.configuration %}
-                                {{ kraken_macros.renderProperty(diff.configuration) }}
-                            {% else %}
-                                {{ macros.status('Missing', 'error', 'spam-2') }}
-                            {% endif %}
-                        </td>
-
-                        <td>
-                            {% if not diff.isChanged %}
-                                No change
-
-                            {% elseif diff.property %}
-                                {{ kraken_macros.renderProperty(diff.property) }}
-
-                            {% else %}
-                                {{ macros.status('Missing', 'error', 'spam-2') }}
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-    {% else %}
-        <p>There is no schema defined for this application. An empty configuration will be deployed.</p>
-    {% endif %}
+{% block lets_do_this %}
 
     <form method="post">
         <ul class="button-list">
