--- a/templates/queue.twig
+++ b/templates/queue.twig
@@ -6,6 +6,6 @@
 {% block content %}
     <h2>Build and Push Queue</h2>
 
-    {% include 'partials/pending-table.twig' %}
+    {% include '_partial-job/pending-table.twig' %}
 
 {% endblock %}
