--- a/templates/_partial-job/build-box.twig
+++ b/templates/_partial-job/build-box.twig
@@ -1,4 +1,4 @@
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% if initiator is not defined %}
     {% set initiator = true %}
