--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -1,4 +1,4 @@
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 <table class="table--spacing-medium" data-tablesaw-mode="stack">
     <thead>
