--- a/templates/admin/queue.history.twig
+++ b/templates/admin/queue.history.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
-{% import 'partials/pagination.twig' as pagination %}
-{% import "partials/macros.twig" as macros %}
+{% import '_partial/pagination.twig' as pagination %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = "Build and Push History" %}
 {% set paginationblock = pagination.time_pagination(selected_date, 'admin.queue') %}
