--- a/templates/kraken/_partial-form/property.twig
+++ b/templates/kraken/_partial-form/property.twig
@@ -1,4 +1,4 @@
-{% import "partials/form/macros.twig" as form_macros %}
+{% import "_partial-form/macros.twig" as form_macros %}
 
 {% set missing_schema = missing_schema|default({}) %}
 {% set form = form|default({}) %}
