--- a/templates/kraken/_partial/configuration.status.twig
+++ b/templates/kraken/_partial/configuration.status.twig
@@ -1,4 +1,4 @@
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 <h2>Configuration Status</h2>
 <div class="details-box">
