--- a/templates/kraken/application.add.twig
+++ b/templates/kraken/application.add.twig
@@ -1,5 +1,5 @@
 {% extends 'base.kraken.twig' %}
-{% import "partials/form/macros.twig" as form_macros %}
+{% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = "Add Application" %}
 
