--- a/templates/kraken/application/application.twig
+++ b/templates/kraken/application/application.twig
@@ -1,5 +1,5 @@
 {% extends 'base.kraken.twig' %}
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = "Application" %}
 {% set isAdmin = true %}
@@ -16,7 +16,7 @@
     {{ block('application_targets') }}
 
     <h2>Configuration Schema</h2>
-    {% include 'kraken/partial/schema.twig' with {'schema': schema} %}
+    {% include 'kraken/_partial/schema.twig' with {'schema': schema} %}
 
 {% endblock %}
 
