--- a/templates/kraken/application/schema/schema.remove.twig
+++ b/templates/kraken/application/schema/schema.remove.twig
@@ -1,5 +1,5 @@
 {% extends 'base.kraken.twig' %}
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = "Confirm Removal of Configuration Schema" %}
 
