--- a/templates/kraken/configuration/latest/property.add.twig
+++ b/templates/kraken/configuration/latest/property.add.twig
@@ -1,6 +1,6 @@
 {% extends 'base.kraken.twig' %}
-{% import "partials/macros.twig" as macros %}
-{% import "partials/form/macros.twig" as form_macros %}
+{% import "_partial/macros.twig" as macros %}
+{% import "_partial-form/macros.twig" as form_macros %}
 {% set js_components = ["kraken.property"] %}
 
 {% set page_title = "Add Property" %}
@@ -16,7 +16,7 @@
     <p>{{ environment.name }}</p>
 
     <h2>Add Property</h2>
-    {% embed "kraken/partial/form/property.twig" %}
+    {% embed "kraken/_partial-form/property.twig" %}
     {% endembed %}
 
 {% endblock %}
