--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
-{% import 'partials/pagination.twig' as pagination %}
-{% import 'partials/macros.twig' as macros %}
+{% import '_partial/pagination.twig' as pagination %}
+{% import '_partial/macros.twig' as macros %}
 
 {% set page_title = "Push history for " ~ repo.name %}
 
