--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% import 'partials/macros.twig' as macros %}
+{% import '_partial/macros.twig' as macros %}
 {% set js_components = ["push.start"] %}
 
 {% set page_title = "Start Push: " ~ build.id %}
