--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% import "partials/macros.twig" as macros %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set isSelf = (currentHalUser.id == user.id) %}
 {% set name = getUsersName(user) %}
