--- a/templates/kraken/configuration/deploy.twig
+++ b/templates/kraken/configuration/deploy.twig
@@ -72,7 +72,7 @@
     <form method="post">
         <ul class="button-list">
             <li><input type="submit" class="btn btn--action" value="Deploy Configuration"></li>
-            <li class="button-list"><a class="btn btn--secondary" href="{{ urlFor('kraken.status', {application: application.id}) }}">Cancel</a></li>
+            <li><a class="btn btn--secondary" href="{{ urlFor('kraken.status', {application: application.id}) }}">Cancel</a></li>
         </ul>
     </form>
 
