Add working rollbacks

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -245,6 +245,9 @@ beta
         <li>
             <a href="/docs/2.4.2/release-notes.html">2.4.2</a>
         </li>
+        <li>
+            <a href="/docs/2.5/release-notes.html">2.5</a>
+        </li>
     </ul>
 {% endblock %}
 
