--- a/templates/kraken/_partial/configuration.twig
+++ b/templates/kraken/_partial/configuration.twig
@@ -8,6 +8,11 @@
     <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
         <thead>
             <tr>
+                {# yes this is stupid. just go with it #}
+                {% if is_snapshot %}
+                    <th></th>
+                {% endif %}
+
                 <th>Property</th>
                 <th class="t15">Type</th>
                 <th>Value</th>
@@ -21,16 +26,19 @@
 
                 <tr>
                     {% if is_snapshot %}
-
-                        <td class="fixed-nobreak">
+                        <td>
                             {% if is_deployed %}
                                 {% if checksums[property.key] == property.checksum %}
-                                    <span class="tooltipped" aria-label="Verified">{{ macros.status_icon('', 'success') }}</span>
+                                    <span class="tooltipped" aria-label="Verified with Consul backend">{{ macros.status_icon('', 'success') }}</span>
+                                    <span class="tablesaw-collapse">Verified with Consul backend</span>
                                 {% else %}
-                                    <span class="tooltipped" aria-label="Missing or different from consul backend">{{ macros.status_icon('', 'error') }}</span>
+                                    <span class="tooltipped" aria-label="Missing or different from Consul backend">{{ macros.status_icon('', 'error') }}</span>
+                                    <span class="tablesaw-collapse">Missing or different from Consul backend</span>
                                 {% endif %}
                             {% endif %}
 
+                        </td>
+                        <td>
                             <code class="code_clear">{{ property.key }}</code>
                         </td>
                         <td>{{ property|formatSchemaType }}</td>
@@ -59,7 +67,7 @@
 
                         {% else %}
                             <td><code class="code_clear">{{ property.key }}</code></td>
-                           <td>
+                            <td>
                                 {{ property.isSecure ? macros.icon('locked') : '' }}
                                 {{ property|formatSchemaType }}
                             </td>
