--- a/templates/kraken/_partial/configuration.twig
+++ b/templates/kraken/_partial/configuration.twig
@@ -10,7 +10,7 @@
             <tr>
                 {# yes this is stupid. just go with it #}
                 {% if is_snapshot %}
-                    <th></th>
+                    <th class="tf1"></th>
                 {% endif %}
 
                 <th>Property</th>
