--- a/sass/utilities/_misc.scss
+++ b/sass/utilities/_misc.scss
@@ -31,3 +31,24 @@
 .fixed-nobreak {
     white-space: nowrap;
 }
+
+.tooltipped-expand {
+  position: absolute;
+  z-index: 1000000;
+  display: none;
+  padding: 5px 8px;
+  font: normal normal 11px/1.5 $body-font;
+  color: $tooltip-text-color;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: none;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: break-word;
+  white-space: pre;
+  pointer-events: none;
+  content: attr(aria-label);
+  background: $tooltip-background-color;
+  border-radius: 3px;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
